--- a/src/components/LeftMenu/LeftMenu.scss
+++ b/src/components/LeftMenu/LeftMenu.scss
@@ -6,7 +6,7 @@
 h4 {
     text-align: center;
     margin-top: 20px;
-    color: #007bff;
+    color: var(--text-color);
 }
 label {
     display: block;
