--- a/src/components/Entities/styles.scss
+++ b/src/components/Entities/styles.scss
@@ -1,4 +1,42 @@
-.dropdown {
-    margin-left:15px;
-    color:#007bff;
+.mosaic {
+    position:absolute;
+    right:2px;
+    bottom:50px;
 }
+
+.ui.black.message {
+    background-color: #FFF;
+    color: black;
+  }
+.entities-filters-content {
+  
+  font-size:16px;
+}
+.entities-filters-content > * {
+   cursor: pointer;
+   padding:0 15px
+}
+.filter-all-content  {
+  padding:5px;
+  background-color:rgb(229,232,243);
+  color:rgb(44,56,137);
+  border-radius: 5px;
+  display: inline-block;
+}
+.filter-all-content-after {
+  display:flex;
+  flex-direction:column;
+  width:auto;
+  height:auto;
+  color:black;
+}
+.filter-all-content-after > * {
+  display: flex;
+  flex-direction:row;
+  margin: 10px;
+}
+
+.filter-all-content-after > * > * {
+  margin-left: 15px;
+}
+
