--- a/src/components/LeftMenu/LeftMenu.scss
+++ b/src/components/LeftMenu/LeftMenu.scss
@@ -2,7 +2,9 @@
 .profilePhoto {
     width: 50%;
     position:relative;
+    top:10px;
     left:25%;
+    border-radius: 50%;
 }
 h4 {
     text-align: center;
